# SpeedPainters

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/data/: colors.h  levels.h
include/game/: game.h  game_data.h  game_input.h  game_load.h  game_unload.h  game_update.h
include/render/: render.h  render_generic.h
src/: main.c
src/game/: game.c  game_input.c  game_load.c  game_unload.c  game_update.c
src/render/: render.c  render_generic.c  render_level.c  render_load.c  render_menu.c
